Updated pdf image description