@@ -12,7 +12,6 @@ import com.itextpdf.kernel.geom.PageSize;
 import com.itextpdf.kernel.pdf.PdfDocument;
 import com.itextpdf.kernel.pdf.PdfWriter;
 import com.itextpdf.layout.Document;
-import com.itextpdf.layout.borders.SolidBorder;
 import com.itextpdf.layout.element.AreaBreak;
 import com.itextpdf.layout.element.Cell;
 import com.itextpdf.layout.element.Div;
@@ -24,11 +23,7 @@ import com.itextpdf.layout.properties.TextAlignment;
 import com.itextpdf.layout.properties.UnitValue;
 import com.itextpdf.layout.properties.VerticalAlignment;
 import com.tripzin.eleganttex.config.FileStorageConfig;
-import com.tripzin.eleganttex.entity.FileStorage;
-import com.tripzin.eleganttex.entity.Order;
-import com.tripzin.eleganttex.entity.OrderProduct;
-import com.tripzin.eleganttex.entity.OrderProductImage;
-import com.tripzin.eleganttex.entity.OrderStatus;
+import com.tripzin.eleganttex.entity.*;
 import com.tripzin.eleganttex.exception.ResourceNotFoundException;
 import com.tripzin.eleganttex.repository.FileStorageRepository;
 import com.tripzin.eleganttex.service.S3Service;
@@ -39,7 +34,6 @@ import org.springframework.core.io.Resource;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.parameters.P;
 import org.springframework.stereotype.Component;
 
 import java.io.ByteArrayOutputStream;
@@ -64,12 +58,13 @@ public class OrderPdfGenerator {
 
     /**
      * Generate a PDF document for an order
+     *
      * @param order The order entity with all its related data
      * @return ResponseEntity containing the PDF as a resource
      */
     public ResponseEntity<Resource> generateOrderPdf(Order order) {
         log.info("Generating PDF for order with ID: {}", order.getId());
-        
+
         try {
             // Create PDF document
             ByteArrayOutputStream baos = new ByteArrayOutputStream();
@@ -77,15 +72,15 @@ public class OrderPdfGenerator {
             PdfDocument pdfDoc = new PdfDocument(writer);
             Document document = new Document(pdfDoc, PageSize.A4);
             document.setMargins(15, 15, 15, 15); // Further reduced margins for bigger images
-            
+
             // Create fonts - using more elegant fonts
             PdfFont boldFont = PdfFontFactory.createFont(StandardFonts.TIMES_BOLD);
             PdfFont regularFont = PdfFontFactory.createFont(StandardFonts.TIMES_ROMAN);
             PdfFont italicFont = PdfFontFactory.createFont(StandardFonts.TIMES_ITALIC);
-            
+
             // First page - Order details
             createOrderDetailsPage(document, order, boldFont, regularFont, italicFont);
-            
+
             // Second page - Product details with images and descriptions
             if (!order.getProducts().isEmpty()) {
                 // Add a new page for product details
@@ -94,31 +89,32 @@ public class OrderPdfGenerator {
                         .setTextAlignment(TextAlignment.CENTER)
                         .setFontColor(PRIMARY_COLOR));
                 document.add(new Paragraph("\n"));
-                
+
                 createProductDetailsPage(document, order, boldFont, regularFont, italicFont);
             }
-            
+
             // Close document
             document.close();
-            
+
             // Return PDF as resource
             byte[] pdfBytes = baos.toByteArray();
             ByteArrayResource resource = new ByteArrayResource(pdfBytes);
-            
+
             return ResponseEntity.ok()
                     .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=order-" + order.getId() + ".pdf")
                     .contentType(MediaType.APPLICATION_PDF)
                     .contentLength(pdfBytes.length)
                     .body(resource);
-            
+
         } catch (IOException e) {
             log.error("Error generating PDF for order with ID: {}", order.getId(), e);
             throw new RuntimeException("Failed to generate PDF", e);
         }
     }
-    
+
     /**
      * Collect all product images from an order
+     *
      * @param order The order entity
      * @return List of all product images
      */
@@ -127,14 +123,15 @@ public class OrderPdfGenerator {
                 .flatMap(product -> product.getImages().stream())
                 .toList();
     }
-    
+
     // Define brand colors
     private final Color PRIMARY_COLOR = new DeviceRgb(41, 128, 185); // Blue
     private final Color SECONDARY_COLOR = new DeviceRgb(52, 73, 94); // Dark blue-gray
     private final Color LIGHT_GRAY = new DeviceRgb(236, 240, 241); // Light gray for backgrounds
-    
+
     /**
      * Get color based on order status
+     *
      * @param status Order status
      * @return Color for the status
      */
@@ -152,23 +149,23 @@ public class OrderPdfGenerator {
             default -> ColorConstants.BLACK;
         };
     }
-    
+
     /**
      * Creates the first page of the PDF with order details
      */
     private void createOrderDetailsPage(Document document, Order order, PdfFont boldFont, PdfFont regularFont, PdfFont italicFont) {
         DateTimeFormatter dateFormatter = DateTimeFormatter.ofPattern("dd/MM/yyyy");
-        
+
         // Add company logo and name in header
         Table headerTable = new Table(UnitValue.createPercentArray(new float[]{1, 1, 1}))
                 .setWidth(UnitValue.createPercentValue(100))
                 .setBorder(null);
-        
+
         try {
-            
+
             // Logo cell
             Cell logoCell = new Cell().setBorder(null).setPadding(3);
-            
+
             // Load logo from resources
             // Use classpath to access the resource
             byte[] logoBytes = Objects.requireNonNull(getClass().getResourceAsStream("/static/images/eleganttexlogo.png")).readAllBytes();
@@ -177,19 +174,19 @@ public class OrderPdfGenerator {
             logo.setWidth(80); // Reduced logo width for more compact layout
             logoCell.add(logo);
             headerTable.addCell(logoCell);
-            
+
             // Company name cell
             Cell companyCell = new Cell().setBorder(null).setPadding(3)
                     .setVerticalAlignment(VerticalAlignment.MIDDLE);
             Cell orderIdCell = new Cell().setBorder(null).setPadding(3)
                     .setVerticalAlignment(VerticalAlignment.MIDDLE).setHorizontalAlignment(HorizontalAlignment.RIGHT);
-            
+
             Paragraph companyName = new Paragraph("Elegant tex")
                     .setFont(boldFont)
                     .setFontSize(22) // Slightly smaller for compactness
                     .setFontColor(PRIMARY_COLOR)
                     .setFixedLeading(24); // Control line height
-            
+
             Paragraph tagline = new Paragraph("Quality Textile Solutions")
                     .setFont(italicFont) // Using italic for the tagline
                     .setFontSize(11)
@@ -200,14 +197,14 @@ public class OrderPdfGenerator {
                     .setFontSize(22) // Slightly smaller for compactness
                     .setFontColor(PRIMARY_COLOR)
                     .setFixedLeading(24); // Control line height
-            
+
             companyCell.add(companyName).add(tagline);
             headerTable.addCell(companyCell);
             orderIdCell.add(orderId);
             headerTable.addCell(orderIdCell);
-            
+
             document.add(headerTable);
-            
+
             // Add a divider
             Div divider = new Div().setWidth(UnitValue.createPercentValue(100))
                     .setHeight(1) // Thinner divider
@@ -225,7 +222,7 @@ public class OrderPdfGenerator {
                     .setTextAlignment(TextAlignment.CENTER)
                     .setFixedLeading(24); // Control line height
             document.add(companyName);
-            
+
             Paragraph tagline = new Paragraph("Quality Textile Solutions")
                     .setFont(italicFont) // Using italic for the tagline
                     .setFontSize(11)
@@ -233,7 +230,7 @@ public class OrderPdfGenerator {
                     .setTextAlignment(TextAlignment.CENTER)
                     .setFixedLeading(13); // Control line height
             document.add(tagline);
-            
+
             // Add a divider
             Div divider = new Div().setWidth(UnitValue.createPercentValue(100))
                     .setHeight(1) // Thinner divider
@@ -242,31 +239,31 @@ public class OrderPdfGenerator {
                     .setMarginBottom(8); // Reduced spacing
             document.add(divider);
         }
-        
+
         // Order details
         Table orderDetailsTable = new Table(UnitValue.createPercentArray(new float[]{1, 1}))
                 .setWidth(UnitValue.createPercentValue(100))
                 .setMarginBottom(6); // Reduced margin
-        
+
         // Left column - Company/Marketplace details
         Cell leftCell = new Cell()
                 .setBorder(null)
                 .setPadding(6) // Reduced padding
                 .setBackgroundColor(LIGHT_GRAY);
-        
+
         Paragraph fromHeader = new Paragraph("From:")
                 .setFont(boldFont)
                 .setFontColor(PRIMARY_COLOR)
                 .setMarginBottom(3) // Reduced margin
                 .setFixedLeading(14); // Control line height
         leftCell.add(fromHeader);
-        
+
         // Handle case where marketplace might be null (for MERCHANT type orders)
         // MERCHANT orders don't have a marketplace associated with them
         if (order.getMarketplace() != null) {
             // For MARKETPLACE orders
             leftCell.add(new Paragraph(order.getMarketplace().getName()).setFont(regularFont))
-                  .add(new Paragraph(order.getMarketplace().getPageUrl()).setFont(regularFont));
+                    .add(new Paragraph(order.getMarketplace().getPageUrl()).setFont(regularFont));
         } else {
             // For MERCHANT orders
             leftCell.add(new Paragraph("Direct Merchant Order").setFont(regularFont));
@@ -276,99 +273,99 @@ public class OrderPdfGenerator {
                 leftCell.add(new Paragraph("Created by: " + creatorName).setFont(regularFont));
             }
         }
-        
+
         // Right column - Order details
         Cell rightCell = new Cell()
                 .setBorder(null)
                 .setPadding(6) // Reduced padding
                 .setBackgroundColor(LIGHT_GRAY);
-        
+
         Paragraph orderHeader = new Paragraph("Order Details:")
                 .setFont(boldFont)
                 .setFontColor(PRIMARY_COLOR)
                 .setMarginBottom(3) // Reduced margin
                 .setFixedLeading(14); // Control line height
-        
+
         // Make order number more prominent with larger font
         Paragraph orderNumber = new Paragraph("Order #: " + order.getOrderNumber())
                 .setFont(boldFont)
                 .setFontSize(12) // Larger font size for prominence
                 .setFontColor(PRIMARY_COLOR)
                 .setMarginBottom(2);
-        
+
         rightCell.add(orderHeader)
                 .add(orderNumber)
                 .add(new Paragraph("Date: " + order.getCreatedAt().format(dateFormatter)).setFont(regularFont))
                 .add(new Paragraph("Status: " + order.getStatus()).setFont(regularFont).setFontColor(getStatusColor(order.getStatus())))
                 .add(new Paragraph("Delivery Date: " + order.getDeliveryDate().format(dateFormatter)).setFont(regularFont));
-        
+
         orderDetailsTable.addCell(leftCell);
         orderDetailsTable.addCell(rightCell);
         document.add(orderDetailsTable);
-        
+
         document.add(new Paragraph("").setMarginBottom(4)); // Smaller spacing
-        
+
         // Create a combined table for customer and delivery info (side by side)
         Table combinedInfoTable = new Table(UnitValue.createPercentArray(new float[]{1, 1}))
                 .setWidth(UnitValue.createPercentValue(100))
                 .setMarginTop(4)
                 .setMarginBottom(6);
-        
+
         Cell customerCell = new Cell()
                 .setBorder(null)
                 .setPadding(6) // Reduced padding
                 .setBackgroundColor(LIGHT_GRAY);
-        
+
         Paragraph customerHeader = new Paragraph("Customer Information:")
                 .setFont(boldFont)
                 .setFontColor(PRIMARY_COLOR)
                 .setMarginBottom(3) // Reduced margin
                 .setFixedLeading(14); // Control line height
-        
+
         customerCell.add(customerHeader)
                 .add(new Paragraph("Name: " + order.getCustomer().getName()).setFont(regularFont))
                 .add(new Paragraph("Phone: " + order.getCustomer().getPhone()).setFont(regularFont));
-        
+
         if (order.getCustomer().getAlternativePhone() != null && !order.getCustomer().getAlternativePhone().isEmpty()) {
             customerCell.add(new Paragraph("Alternative Phone: " + order.getCustomer().getAlternativePhone()).setFont(regularFont));
         }
-        
+
         // Enhanced address formatting with geographical information
         String formattedAddress = formatCustomerAddress(order.getCustomer());
         customerCell.add(new Paragraph("Address: " + formattedAddress).setFont(regularFont));
-        
+
         if (order.getCustomer().getFacebookId() != null && !order.getCustomer().getFacebookId().isEmpty()) {
             customerCell.add(new Paragraph("Facebook: " + order.getCustomer().getFacebookId()).setFont(regularFont));
         }
-        
+
         // Delivery details cell (will be placed next to customer cell)
         Cell deliveryCell = new Cell()
                 .setBorder(null)
                 .setPadding(6) // Reduced padding
                 .setBackgroundColor(LIGHT_GRAY);
-        
+
         Paragraph deliveryHeader = new Paragraph("Delivery Information:")
                 .setFont(boldFont)
                 .setFontColor(PRIMARY_COLOR)
                 .setMarginBottom(3) // Reduced margin
                 .setFixedLeading(14); // Control line height
-        
+
         deliveryCell.add(deliveryHeader)
                 .add(new Paragraph("Channel: " + order.getDeliveryChannel()).setFont(regularFont))
                 .add(new Paragraph("Delivery Date: " + order.getDeliveryDate().format(dateFormatter)).setFont(regularFont));
-        
+
         // Add both cells to the combined table
         combinedInfoTable.addCell(customerCell);
         combinedInfoTable.addCell(deliveryCell);
         document.add(combinedInfoTable);
-        
+
         document.add(new Paragraph("").setMarginBottom(4)); // Smaller spacing
-        
+
         // Products table
         Table productsTable = new Table(UnitValue.createPercentArray(new float[]{3, 2, 1, 2, 2}))
                 .setWidth(UnitValue.createPercentValue(100))
                 .setMarginBottom(6); // Reduced margin
-        
+
         // Table header
         Cell headerCell1 = new Cell().add(new Paragraph("Product").setFont(boldFont))
                 .setBackgroundColor(PRIMARY_COLOR).setFontColor(ColorConstants.WHITE)
@@ -385,18 +382,18 @@ public class OrderPdfGenerator {
         Cell headerCell5 = new Cell().add(new Paragraph("Subtotal").setFont(boldFont))
                 .setBackgroundColor(PRIMARY_COLOR).setFontColor(ColorConstants.WHITE)
                 .setPadding(4); // Reduced padding
-        
+
         productsTable.addHeaderCell(headerCell1);
         productsTable.addHeaderCell(headerCell2);
         productsTable.addHeaderCell(headerCell3);
         productsTable.addHeaderCell(headerCell4);
         productsTable.addHeaderCell(headerCell5);
-        
+
         // Table rows
         boolean alternateRow = false;
         for (OrderProduct product : order.getProducts()) {
             Color rowColor = alternateRow ? LIGHT_GRAY : ColorConstants.WHITE;
-            
+
             Cell cell1 = new Cell().add(new Paragraph(product.getProductType().getName()).setFont(regularFont))
                     .setBackgroundColor(rowColor).setPadding(4); // Reduced padding
             Cell cell2 = new Cell().add(new Paragraph(product.getFabric().getName()).setFont(regularFont))
@@ -405,66 +402,67 @@ public class OrderPdfGenerator {
                     .setBackgroundColor(rowColor).setPadding(4); // Reduced padding
             Cell cell4 = new Cell().add(new Paragraph(product.getPrice().toString()).setFont(regularFont))
                     .setBackgroundColor(rowColor).setPadding(4); // Reduced padding
-            
+
             BigDecimal subtotal = product.getPrice().multiply(new BigDecimal(product.getQuantity()));
             Cell cell5 = new Cell().add(new Paragraph(subtotal.toString()).setFont(regularFont))
                     .setBackgroundColor(rowColor).setPadding(4); // Reduced padding
-            
+
             productsTable.addCell(cell1);
             productsTable.addCell(cell2);
             productsTable.addCell(cell3);
             productsTable.addCell(cell4);
             productsTable.addCell(cell5);
-            
+
             // Toggle row color for next row
             alternateRow = !alternateRow;
         }
-        
+
         document.add(productsTable);
-        
+
         document.add(new Paragraph("").setMarginBottom(4)); // Smaller spacing
-        
+
         // Totals
         Table totalsTable = new Table(UnitValue.createPercentArray(new float[]{4, 1}))
                 .setWidth(UnitValue.createPercentValue(100));
-        
+
         // Calculate total subtotal
         BigDecimal orderSubtotal = order.getProducts().stream()
                 .map(p -> p.getPrice().multiply(new BigDecimal(p.getQuantity())))
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
-        
+
         totalsTable.addCell(new Cell().setBorder(null).add(new Paragraph("Subtotal:").setFont(boldFont).setTextAlignment(TextAlignment.RIGHT)));
         totalsTable.addCell(new Cell().setBorder(null).add(new Paragraph(orderSubtotal.toString()).setFont(regularFont)));
-        
+
         totalsTable.addCell(new Cell().setBorder(null).add(new Paragraph("Delivery Charge:").setFont(boldFont).setTextAlignment(TextAlignment.RIGHT)));
         totalsTable.addCell(new Cell().setBorder(null).add(new Paragraph(order.getDeliveryCharge().toString()).setFont(regularFont)));
-        
+
         totalsTable.addCell(new Cell().setBorder(null).add(new Paragraph("Total:").setFont(boldFont).setTextAlignment(TextAlignment.RIGHT)));
         totalsTable.addCell(new Cell().setBorder(null).add(new Paragraph(order.getTotalAmount().toString()).setFont(boldFont)));
-        
+
         document.add(totalsTable);
-        
+
         // Add page break for images
         document.add(new AreaBreak());
     }
-    
+
     /**
      * Creates the second page with product images in a grid layout with descriptions
      */
     private void createProductDetailsPage(Document document, Order order, PdfFont boldFont, PdfFont regularFont, PdfFont italicFont) throws IOException {
         // Collect all images from all products with their associated product information
         List<ProductImageInfo> allProductImages = new ArrayList<>();
-        
+
         for (OrderProduct product : order.getProducts()) {
             for (OrderProductImage orderImage : product.getImages()) {
                 allProductImages.add(new ProductImageInfo(
-                    orderImage,
-                    product.getProductType().getName(),
-                    product.getDescription()
+                        orderImage,
+                        product.getProductType().getName(),
+                        product.getDescription(),
+                        product.getFabric()
                 ));
             }
         }
-        
+
         if (allProductImages.isEmpty()) {
             document.add(new Paragraph("No product images available")
                     .setFont(regularFont)
@@ -473,30 +471,30 @@ public class OrderPdfGenerator {
                     .setFontColor(ColorConstants.GRAY));
             return;
         }
-        
+
         // Create a 2-column grid layout for images
         Table imageGrid = new Table(UnitValue.createPercentArray(new float[]{1, 1}))
                 .setWidth(UnitValue.createPercentValue(100))
                 .setMarginBottom(5);
-        
+
         for (int i = 0; i < allProductImages.size(); i++) {
             ProductImageInfo imageInfo = allProductImages.get(i);
-            
+
             // Create cell for each image
             Cell imageCell = new Cell()
                     .setBorder(null)
                     .setPadding(3)
                     .setTextAlignment(TextAlignment.CENTER);
 
-            String description = imageInfo.description != null && !imageInfo.description.trim().isEmpty()
-                    ? imageInfo.description.trim()
+            String description = (imageInfo.description != null && !imageInfo.description.isBlank())
+                    ? imageInfo.fabric.getName()+ " - " +imageInfo.description.trim()
                     : "No description";
 
             try {
                 // Get image data from storage
                 FileStorage fileStorage = fileStorageRepository.findById(imageInfo.orderImage.getImageId())
                         .orElseThrow(() -> new ResourceNotFoundException("Image not found with ID: " + imageInfo.orderImage.getImageId()));
-                
+
                 byte[] imageData;
                 if (fileStorageConfig.isUseS3Storage()) {
                     imageData = s3Service.downloadFile(fileStorage.getFilePath());
@@ -505,47 +503,47 @@ public class OrderPdfGenerator {
                             .resolve(fileStorage.getFilePath());
                     imageData = java.nio.file.Files.readAllBytes(imagePath);
                 }
-                
+
                 // Create image
                 ImageData data = ImageDataFactory.create(imageData);
                 Image img = new Image(data);
-                
+
                 // Scale image to fit in grid cell - increased dimensions for bigger images
                 float maxWidth = 320;
                 float maxHeight = 280;
-                
+
                 float imgWidth = img.getImageWidth();
                 float imgHeight = img.getImageHeight();
                 float widthRatio = maxWidth / imgWidth;
                 float heightRatio = maxHeight / imgHeight;
                 float scaleFactor = Math.min(widthRatio, heightRatio);
-                
+
                 img.scale(scaleFactor, scaleFactor);
                 img.setHorizontalAlignment(HorizontalAlignment.CENTER);
-                
+
                 imageCell.add(img);
-                
+
                 // Add description under the image
 
-                
-                String caption = imageInfo.productType + " - " + description;
-                
+
+                String caption = "Product " + (i+1) + " : " + imageInfo.productType + " - " + description;
+
                 imageCell.add(new Paragraph(caption)
                         .setFont(regularFont)
                         .setFontSize(10)
                         .setTextAlignment(TextAlignment.CENTER)
                         .setFontColor(SECONDARY_COLOR)
                         .setMarginTop(2));
-                
+
             } catch (Exception e) {
                 log.error("Error adding image to PDF: {}", e.getMessage());
                 imageCell.add(new Paragraph("Image not available")
                         .setFontColor(ColorConstants.GRAY)
                         .setFontSize(10)
                         .setTextAlignment(TextAlignment.CENTER));
-                
-                String caption = imageInfo.productType + " - " + description;
-                
+
+                String caption = "Product " + (i+1) + " : " + imageInfo.productType + " - " + description;
+
                 imageCell.add(new Paragraph(caption)
                         .setFont(regularFont)
                         .setFontSize(14)
@@ -553,54 +551,47 @@ public class OrderPdfGenerator {
                         .setFontColor(SECONDARY_COLOR)
                         .setMarginTop(5));
             }
-            
+
             imageGrid.addCell(imageCell);
-            
+
             // If we have an odd number of images and this is the last one, add an empty cell
             if (i == allProductImages.size() - 1 && allProductImages.size() % 2 == 1) {
                 imageGrid.addCell(new Cell().setBorder(null));
             }
         }
-        
+
         document.add(imageGrid);
     }
-    
+
     /**
      * Helper class to store product image information
      */
-    private static class ProductImageInfo {
-        final OrderProductImage orderImage;
-        final String productType;
-        final String description;
-        
-        ProductImageInfo(OrderProductImage orderImage, String productType, String description) {
-            this.orderImage = orderImage;
-            this.productType = productType;
-            this.description = description;
-        }
+    private record ProductImageInfo(OrderProductImage orderImage, String productType, String description,
+                                    Fabric fabric) {
     }
-    
+
     /**
      * Format customer address with geographical information when available
+     *
      * @param customer The customer entity
      * @return Formatted address string
      */
     private String formatCustomerAddress(com.tripzin.eleganttex.entity.Customer customer) {
         // Use the helper method from Customer entity which handles both new and legacy addresses
         String displayAddress = customer.getDisplayAddress();
-        
+
         // If we have a geographical address, enhance it with postal code
         if (customer.getAddress() != null) {
             StringBuilder enhancedAddress = new StringBuilder(customer.getAddress().getFormattedAddress());
-            
+
             // Add postal code if available
             if (customer.getAddress().getPostalCode() != null && !customer.getAddress().getPostalCode().trim().isEmpty()) {
                 enhancedAddress.append(", ").append(customer.getAddress().getPostalCode().trim());
             }
-            
+
             return enhancedAddress.toString();
         }
-        
+
         // Fall back to display address (which handles legacy addresses)
         return displayAddress != null ? displayAddress : "Address not available";
     }
